--- a/android/com.varmarken.rejseplanen.afgangstavlen/AndroidManifest.xml
+++ b/android/com.varmarken.rejseplanen.afgangstavlen/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.varmarken.rejseplanen.afgangstavlen.DepartureBoardActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:launchMode="singleTop">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
 
